Честно забыл что делал тут.. Что-то с InAppReview и InAppUpdate вроде делал..